Begin BotSetup page

--- a/www/html/BotSetup.html
+++ b/www/html/BotSetup.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		
-		<title>BotSetup</title>
-		<link href="css/bootstrap.min.css" rel="stylesheet">
-	</head>
+<head>
+	<title>Bootstrap Example</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+</head>
+<body>
 	<body>
-		<h1>Hello, world!</h1>
-		
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-		</script>
-		<script src="js/bootstrap.min.js"></script>
+		<div class="container">
+		<div class="jumbotron">
+			<h1>Bot Controls</h1>
+			<p>Setup and control the ChapterBot</p>
+		</div>
+		</div>
 	</body>
 </html>
