--- a/www/html/BotSetup.html
+++ b/www/html/BotSetup.html
@@ -11,10 +11,13 @@
 <body>
 	<body>
 		<div class="container">
-		<div class="jumbotron">
-			<h1>Bot Controls</h1>
-			<p>Setup and control the ChapterBot</p>
-		</div>
+			<div class="jumbotron">
+				<h1>Bot Controls</h1>
+				<p>Setup and control the ChapterBot</p>
+			</div>
+			<form role="form">
+				<button type="submit" class="btn btn-default">Power Off</button>
+			</form>
 		</div>
 	</body>
 </html>
