edit power button

--- a/www/html/BotSetup.html
+++ b/www/html/BotSetup.html
@@ -15,8 +15,8 @@
 				<h1>Bot Controls</h1>
 				<p>Setup and control the ChapterBot</p>
 			</div>
-			<form role="form">
-				<button type="submit" class="btn btn-default">Power Off</button>
+			<form role="form" method="post" class="form-horizontal" action="power.php">
+				<button type="submit" class="btn btn-default" value="0">Power Off</button>
 			</form>
 		</div>
 	</body>
