--- a/www/html/BotSetup.html
+++ b/www/html/BotSetup.html
@@ -15,9 +15,18 @@
 				<h1>Bot Controls</h1>
 				<p>Setup and control the ChapterBot</p>
 			</div>
-			<form role="form" method="post" class="form-horizontal" action="power.php">
-				<button type="submit" class="btn btn-default" value="0">Power Off</button>
-			</form>
+			<button type="button" id="power-button" onclick="" class="btn btn-danger">Power Off</button>
 		</div>
 	</body>
 </html>
+
+<script>
+$('.power-button').click(function(){
+	$.ajax({
+		url: ''
+		type: 'POST',
+		data: {},
+		success: function(result) {alert("Pressed");}
+	});
+};
+</script>
