--- a/www/html/BotSetup.html
+++ b/www/html/BotSetup.html
@@ -15,7 +15,7 @@
 				<h1>Bot Controls</h1>
 				<p>Setup and control the ChapterBot</p>
 			</div>
-			<button type="button" id="power-button" onclick="" class="btn btn-danger">Power Off</button>
+			<button type="button" id="power-button" class="btn btn-danger">Power Off</button>
 		</div>
 	</body>
 </html>
