--- a/www/html/BotSetup.html
+++ b/www/html/BotSetup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Bootstrap Example</title>
+	<title>ChapterBot Control</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
@@ -21,7 +21,7 @@
 </html>
 
 <script>
-$('.power-button').click(function(){
+$('#power-button').click(function(){
 	$.post('power.php', function(data){
 		alert("pressed");
 	});
