--- a/www/html/BotSetup.html
+++ b/www/html/BotSetup.html
@@ -7,14 +7,7 @@
  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
- <script>
-$(document).ready(function(){
- $('#offbutton').on('click', function(){
-    $.post('power.php', function(data){
-   });
- });
-});
-</script>
+ <script type="text/javascript" src="BotSetup.js"></script>
 </head>
 <body>
  <body>
