Dynamically update server status on BotSetup page

--- a/www/html/BotSetup.html
+++ b/www/html/BotSetup.html
@@ -20,6 +20,10 @@
     <div class="col-sm-6"><input type="button" id="offbutton" class="btn btn-danger" value="Power Off"/></div>
     <div class="col-sm-6"><input type="button" id="onbutton" class="btn btn-success" value="Power On"/></div>
    </span>
+   <span class="row">
+    <pre id="FilterStatus">
+    </pre>
+   </span>
   </div>
  </body>
 </html>
